[package]
edition = "2021"
name = "interactivepercolationvisualizer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = {version = "0.20.0", path = "../rust_minifb"}
percolation = {version = "0.1.0", path = "../percolation"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
