[package]
edition = "2021"
name = "percolation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
font-kit = "0.11.0"
image = "0.24.1"
native-dialog = "0.6.3"
rusttype = "0.9.2"
tinyfiledialogs = { version = "3.9.1", default-features = false }
weightedquickunion = {version = "0.1.0", path = "../weightedquickunion"}

[features]
