[package]
edition = "2021"
name = "percolationvisualizer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
percolation = {version = "0.1.0", path = "../percolation"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
