[package]
authors = ["Daniel Collin <daniel@collin.com>"]
build = "build.rs"
categories = ["rendering"]
description = "Cross-platform window setup with optional bitmap rendering"
documentation = "https://docs.rs/minifb/0.15/minifb"
edition = "2018"
keywords = ["windowing", "window", "framebuffer"]
license = "MIT OR Apache-2.0"
name = "minifb"
readme = "README.md"
repository = "https://github.com/emoon/rust_minifb"
version = "0.20.0"

exclude = [
  "resources/",
]

[badges]
maintenance = {status = "actively-developed"}

[dev-dependencies]
png = "0.17"

[build-dependencies]
cc = "1.0"

[dependencies]
raw-window-handle = "0.4"

[target.'cfg(windows)'.dependencies.winapi]
features = [
  "winuser",
  "wingdi",
  "libloaderapi",
  "errhandlingapi",
  "fileapi",
]
version = "0.3"

[features]
default = ["wayland", "x11"]
wayland = ["wayland-client", "wayland-protocols", "wayland-cursor", "tempfile", "xkb", "xkbcommon-sys"]
x11 = ["x11-dl", "xkb", "libc"]

[target.'cfg(not(any(target_os = "macos", target_os = "redox", windows)))'.dependencies]
libc = {version = "0.2.107", optional = true}
tempfile = {version = "3.3", optional = true}
wayland-client = {version = "0.29", optional = true}
wayland-cursor = {version = "0.29", optional = true}
wayland-protocols = {version = "0.29", features = ["client", "unstable_protocols"], optional = true}
x11-dl = {version = "2.19.1", optional = true}
xkb = {version = "0.2.1", optional = true}
xkbcommon-sys = {version = "0.7.5", optional = true}

[target.x86_64-unknown-redox.dependencies]
orbclient = "0.3.20"
